[metadata]
name = ckanext-tour
version = 0.1.1
description = Create an interactive tour that will help users familiarize themselves with the important features of your portal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mutantsan/ckanext-tour
author = Oleksandr Cherniavskyi
author_email = mutantsan@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             tour = ckanext.tour.plugin:TourPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/tour/i18n/ckanext-tour.pot
width = 80

[init_catalog]
domain = ckanext-tour
input_file = ckanext/tour/i18n/ckanext-tour.pot
output_dir = ckanext/tour/i18n

[update_catalog]
domain = ckanext-tour
input_file = ckanext/tour/i18n/ckanext-tour.pot
output_dir = ckanext/tour/i18n
previous = true

[compile_catalog]
domain = ckanext-tour
directory = ckanext/tour/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
